// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` should render correctly 1`] = `
<tr class="owner">
  <th class="icon select"><label class="container"><input id="checkbox" disabled="disabled" type="checkbox" class="checkmark-input"> <span class="checkmark"></span></label></th>
  <th class="align-left data">
    <p>testShortName</p>
  </th>
  <th class="align-left data">
    <p>1/1/1970</p>
  </th>
  <th class="align-left data">
    <p>test@example.com</p>
  </th>
</tr>
`;

exports[` should render correctly with item row highlighted 1`] = `
<tr class="selected owner">
  <th class="icon select"><label class="container"><input id="checkbox" disabled="disabled" type="checkbox" class="checkmark-input"> <span class="checkmark"></span></label></th>
  <th class="align-left data">
    <p>testShortName</p>
  </th>
  <th class="align-left data">
    <p>1/1/1970</p>
  </th>
  <th class="align-left data">
    <p>test@example.com</p>
  </th>
</tr>
`;
